--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -10,18 +10,20 @@
       </div>
     </div>
 
-    <form class="needs-validation" novalidate="">
+    <form #quoteForm="ngForm" class="needs-validation">
       <div class="row">
         <div class="col-md-6 mb-3">
           <label for="firstName">Nombre</label>
-          <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+          <div><span *ngIf="!isEdit">{{quote.firstName}}</span></div>
+          <input type="text" *ngIf="isEdit" [(ngModel)]="quote.firstName" class="form-control" id="firstName" name="firstName" placeholder="" value="" required="" #firstName>
           <div class="invalid-feedback">
             Por favor ingrese un nombre.
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <label for="lastName">Apellidos</label>
-          <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+          <div><span *ngIf="!isEdit">{{quote.lastName}}</span></div>
+          <input type="text" *ngIf="isEdit" [(ngModel)]="quote.lastName" class="form-control" id="lastName" name="lastName" placeholder="" value="" required="">
           <div class="invalid-feedback">
             Por favor ingrese los apellidos.
           </div>
@@ -31,7 +33,8 @@
       <div class="row">
         <div class="col-md-12 mb-3">
           <label for="customer">Cliente / Organización</label>
-          <input type="text" class="form-control" id="customer" placeholder="" value="" required="">
+          <div><span *ngIf="!isEdit">{{quote.customerName}}</span></div>
+          <input type="text" *ngIf="isEdit" [(ngModel)]="quote.customerName" class="form-control" id="customer" name="customer" placeholder="" value="" required="">
           <div class="invalid-feedback">
             Por favor ingrese un cliente.
           </div>
@@ -41,39 +44,29 @@
       <div class="row">
         <div class="col-md-6 mb-3">
           <label for="phone">Teléfono</label>
-          <input type="text" class="form-control" id="phone" placeholder="51 1 2568754" value="" required="">
+          <div><span *ngIf="!isEdit">{{quote.phone}}</span></div>
+          <input type="text" *ngIf="isEdit" [(ngModel)]="quote.phone" class="form-control" id="phone" name="phone" placeholder="51 1 2568754" value="" required="">
           <div class="invalid-feedback">
             Por favor ingrese un teléfono válido.
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <label for="email">Correo Electrónico <span class="text-muted">(Opcional)</span></label>
-          <input type="email" class="form-control" id="email" placeholder="you@example.com">
+          <div><span *ngIf="!isEdit">{{quote.email}}</span></div>
+          <input type="email" *ngIf="isEdit" [(ngModel)]="quote.email" class="form-control" id="email" name="email" placeholder="you@example.com">
           <div class="invalid-feedback">
             Por favor ingrese una dirección de correo electrónico válida para alertas de envío.
           </div>
         </div>
       </div>
-<!--
-      <div class="mb-3">
-        <label for="username">Username</label>
-        <div class="input-group">
-          <div class="input-group-prepend">
-            <span class="input-group-text">@</span>
-          </div>
-          <input type="text" class="form-control" id="username" placeholder="Username" required="">
-          <div class="invalid-feedback" style="width: 100%;">
-            Your username is required.
-          </div>
-        </div>
-      </div>
--->
+
       <div class="mb-3">
       </div>
 
       <div class="mb-3">
         <label for="address">Dirección - linea 1</label>
-        <input type="text" class="form-control" id="address" placeholder="1234 Calle Principal" required="">
+        <div><span *ngIf="!isEdit">{{quote.address}}</span></div>
+        <input type="text" *ngIf="isEdit" [(ngModel)]="quote.address" class="form-control" id="address" name="address" placeholder="1234 Calle Principal" required="">
         <div class="invalid-feedback">
           Por favor ingrese una dirección de envío.
         </div>
@@ -81,15 +74,17 @@
 
       <div class="mb-3">
         <label for="address2">Dirección - linea 2 <span class="text-muted">(Opcional)</span></label>
-        <input type="text" class="form-control" id="address2" placeholder="Nro de departamento o interior">
+        <input type="text" *ngIf="isEdit" class="form-control" id="address2" placeholder="Nro de departamento o interior">
       </div>
 
       <div class="row">
         <div class="col-md-5 mb-3">
           <label for="country">País</label>
-          <select class="custom-select d-block w-100" id="country" required="">
+          <div><span *ngIf="!isEdit">{{quote.country}}</span></div>
+          <select *ngIf="isEdit" [(ngModel)]="quote.country" class="custom-select d-block w-100" id="country" name="country" required="">
             <option value="">Seleccione...</option>
             <option>Perú</option>
+            <option>Brazil</option>
           </select>
           <div class="invalid-feedback">
             Por favor seleccione un país.
@@ -97,9 +92,11 @@
         </div>
         <div class="col-md-4 mb-3">
           <label for="state">Ciudad</label>
-          <select class="custom-select d-block w-100" id="state" required="">
+          <div><span *ngIf="!isEdit">{{quote.city}}</span></div>
+          <select *ngIf="isEdit" [(ngModel)]="quote.city" class="custom-select d-block w-100" id="city" name="city" required="">
             <option value="">Seleccione...</option>
             <option>Lima</option>
+            <option>Stewart</option>
           </select>
           <div class="invalid-feedback">
             Por favor seleccione una ciudad.
@@ -107,7 +104,8 @@
         </div>
         <div class="col-md-3 mb-3">
           <label for="province">Provincia</label>
-          <select class="custom-select d-block w-100" id="province" required="">
+          <div><span *ngIf="!isEdit">{{quote.state}}</span></div>
+          <select *ngIf="isEdit" [(ngModel)]="quote.state" class="custom-select d-block w-100" id="state" name="state" required="">
             <option value="">Seleccione...</option>
             <option>Lima</option>
           </select>
@@ -130,55 +128,6 @@
       <hr class="mb-4">
 
       <h4 class="mb-3">Items</h4>
-<!--
-      <div class="d-block my-3">
-        <div class="custom-control custom-radio">
-          <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
-          <label class="custom-control-label" for="credit">Credit card</label>
-        </div>
-        <div class="custom-control custom-radio">
-          <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-          <label class="custom-control-label" for="debit">Debit card</label>
-        </div>
-        <div class="custom-control custom-radio">
-          <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
-          <label class="custom-control-label" for="paypal">Paypal</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <label for="cc-name">Name on card</label>
-          <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-          <small class="text-muted">Full name as displayed on card</small>
-          <div class="invalid-feedback">
-            Name on card is required
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <label for="cc-number">Credit card number</label>
-          <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-          <div class="invalid-feedback">
-            Credit card number is required
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 mb-3">
-          <label for="cc-expiration">Expiration</label>
-          <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-          <div class="invalid-feedback">
-            Expiration date required
-          </div>
-        </div>
-        <div class="col-md-3 mb-3">
-          <label for="cc-expiration">CVV</label>
-          <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-          <div class="invalid-feedback">
-            Security code required
-          </div>
-        </div>
-      </div>
-      -->
       
       <div class="table-responsive">
         <table class="table table-striped table-sm">
@@ -192,8 +141,8 @@
               <th>Total</th>
             </tr>
           </thead>
-          <tbody>
-            <ng-container *ngFor="let item of quotes[0].items">
+          <tbody *ngIf="quote">
+            <ng-container *ngFor="let item of quote.items">
               <tr>
                   <td>{{item.line}}</td>
                   <td>{{item.productNo}}</td>
@@ -202,7 +151,7 @@
                   <td>{{item.currency}}</td>
                   <td>{{item.total}}</td>
                 </tr>
-            </ng-container>          
+            </ng-container>   
           </tbody>
         </table>
       </div>      
