Get a sale by id

--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -109,7 +109,7 @@
             </tr>
           </thead>
           <tbody>
-            <ng-container *ngFor="let item of sales[0].items">
+            <ng-container *ngFor="let item of sale.items">
                 <tr>
                     <td>{{item.line}}</td>
                     <td>{{item.productNo}}</td>
