Deployment tweaks and character fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" routerLink="/profile">Perfil</a>
-        <a class="dropdown-item" routerLink="/billing">Facturación</a>
+        <a class="dropdown-item" routerLink="/billing">Facturaci&oacute;n</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Salir</a>
       </div>
