--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
       </ul>
 
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-        <span>Administración</span>
+        <span>Administraci&oacute;n</span>
         <a class="d-flex align-items-center text-muted">
           <i class="far fa-plus-square"></i>
           <span data-feather="plus-circle"></span>
@@ -37,7 +37,7 @@
           <a class="nav-link" routerLink="/config" routerLinkActive="active">
             <i class="fas fa-hammer feather"></i>
             <span data-feather="file-text"></span>
-            Configuración
+            Configuraci&oacute;n
           </a>
         </li>
         <li class="nav-item">
