--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-md-9 mb-3">
           <div><span *ngIf="!isEdit">{{sale.description}}</span></div>
-          <textarea *ngIf="isEdit" [(ngModel)]="sale.description" class="form-control" id="description" name="description" aria-label="identificación" placeholder="identificación"></textarea>
+          <textarea *ngIf="isEdit" [(ngModel)]="sale.description" class="form-control" id="description" name="description" aria-label="identificacion" placeholder="identificaci&oacute;n"></textarea>
         </div>
         <div class="col-md-3 mb-3">
           <label for="expiration">Vencimiento</label>
@@ -110,7 +110,7 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Código</th>
+              <th>C&oacute;digo</th>
               <th>Cantidad</th>
               <th>Precio Unitario</th>
               <th>Moneda</th>
