--- a/src/app/quotes/list/quotes-list.component.html
+++ b/src/app/quotes/list/quotes-list.component.html
@@ -4,7 +4,7 @@
       <h1 class="h2">Cotizaciones</h1>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
-          <button [disabled]="loading" class="btn btn-sm btn-outline-primary" (click)="newQuote()">Nuevo</button>
+          <button class="btn btn-sm btn-outline-primary" (click)="newQuote()">Nuevo</button>
           <button class="btn btn-sm btn-outline-secondary">Facturar</button>
         </div>
       </div>
