--- a/src/app/sales/list/sales-list.component.html
+++ b/src/app/sales/list/sales-list.component.html
@@ -4,7 +4,7 @@
       <h1 class="h2">Ventas</h1>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
-          <button [disabled]="loading" class="btn btn-sm btn-outline-primary" (click)="newSales()">Nuevo</button>
+          <button class="btn btn-sm btn-outline-primary" (click)="newSales()">Nuevo</button>
         </div>
       </div>
     </div>
