--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -6,7 +6,7 @@
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
           <button class="btn btn-sm btn-outline-secondary">Guardar</button>
-          <button [disabled]="loading" class="btn btn-sm btn-outline-secondary" (click)="cancelSale()">Cancelar</button>
+          <button class="btn btn-sm btn-outline-secondary" (click)="cancelSale()">Cancelar</button>
         </div>
       </div>
     </div>
